# AnisoNet

./: .gitignore  LICENSE  README.md  count.csv  github_stuff - Shortcut.lnk  pyproject.toml  scalar.csv  train.py  utils_data.py
.ipynb_checkpoints/: generate_plots_final-checkpoint.ipynb  train-checkpoint.ipynb  utils_model-checkpoint.py  utils_train-checkpoint.py
dataset/: df_full_diel.p  df_new_dft.p
notebooks/: plot.ipynb  predict.ipynb  style.mplstyle
notebooks/plots/: ar.csv  count.csv  scalar.csv
scripts/: run_train.py  run_train.sh
src/AnisoNet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/anisonet/: __init__.py  cli.py  data.py  model.py  train.py
tools/: arg_parser.py
